Added bin to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "example2env",
   "version": "0.1.0",
   "description": "A .env file generator using .env.example as template",
+  "bin": "index.js",
   "main": "index.js",
   "repository": "https://github.com/devgar/example2env",
   "author": "Edgar Albalate <dev.gardo@gmail.com>",
