--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "scripts": {
     "prepare": "npm run build",
-    "build": "esbuild --minify src/index.js --outfile=bin/index.js --target=es6"
+    "build": "esbuild --minify src/*.js --outdir=bin --target=es6 --platform=node",
+    "test": "jest"
   },
   "dependencies": {
     "get-uri": "^3.0.2",
@@ -18,6 +19,7 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "esbuild": "^0.4.3"
+    "esbuild": "^0.4.3",
+    "jest": "^26.2.2"
   }
 }
