--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "example2env",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "description": "A .env file generator using .env.example as template",
-  "bin": "bin/index.js",
+  "bin": {
+    "example2env": "bin/index.js"
+  },
   "main": "bin/index.js",
   "repository": "https://github.com/devgar/example2env",
   "author": "Edgar Albalate <dev.gardo@gmail.com>",
